syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option java_package = "com.example.blog";
option java_multiple_files = true;

service BlogService{
    rpc CreateBlog(Blog) returns (BlogId);
    rpc ReadBlog(BlogId) returns (Blog);
    rpc UpdateBlog(UpdateRequest) returns (Blog);
    rpc DeleteBlog(BlogId) returns (google.protobuf.Empty);
    rpc FetchAllBlogs(google.protobuf.Empty) returns (BlogList);
}

message Blog{
    string id = 1;
    string author = 2;
    string title  = 3;
    string content = 4;
}
message BlogId{
    string id =1;
}

message UpdateRequest{
    string id = 1;
    string content = 2;
}
message BlogList{
    repeated Blog blogs = 1;
}